# tools

./: .gitignore  .ncurc.json  .prettierignore  .typos.toml  AGENTS.md  Cargo.toml  README.md  bcz.confit.ts  eslint.config.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.base.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: build-napi.yml  ci.yml  deploy.yml  napi.yml  publish-npm.yml  publish.yml  reusable-cargo-test.yml  reusable-node-test.yml  reusable-other-test.yml  reusable-release-build.yml  reusable-wasi-build.yml  reusable-wasi-test.yml
crates/baicie_binding/: Cargo.toml
crates/baicie_binding/src/: lib.rs
crates/baicie_json_diff/: Cargo.toml  README.md
crates/baicie_json_diff/src/: lib.rs
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: getting-started.md
docs/internal/: releas.md
docs/logger/: index.md
docs/project/: config-packages-design.md  docs-manager-cli-design.md
docs/scripts/: index.md
docs/storage/: api.md  getting-started.md  index.md
playground/json-diff/: design.md  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
playground/napi-vue3/: README.md  index.html  package.json  vite.config.ts
playground/scripts/: index.html  package.json  vite.config.ts
playground/storage/: index.html  package.json  tsconfig.json  vite.config.ts
playground/vue/: package.json  (+1 more)
scripts/: publish-script.ts  publish.sh  release.ts  update-version.ts  verify-commit.js  verify-commit.ts
(+21 files in other folders)
