[package]
name    = "baicie_binding"
publish = false
version = "0.1.0"

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
doctest    = false

[dependencies]
baicie_json_diff = { path = "../baicie_json_diff" }
napi             = { workspace = true }
napi-derive      = { workspace = true }
serde_json       = "1.0"

[build-dependencies]
napi-build = { workspace = true }
